--- a/src/root.scss
+++ b/src/root.scss
@@ -5,3 +5,5 @@
 @import '~bulma/sass/layout/_all.sass';
 @import '~bulma/sass/form/_all.sass';
 @import '~bulma/sass/elements/title.sass';
+@import '~bulma/sass/elements/content.sass';
+@import '~bulma/sass/elements/container.sass';
