--- a/src/root.scss
+++ b/src/root.scss
@@ -7,3 +7,4 @@
 @import '~bulma/sass/elements/title.sass';
 @import '~bulma/sass/elements/content.sass';
 @import '~bulma/sass/elements/container.sass';
+@import '~bulma/sass/elements/button.sass';
