--- a/src/root.scss
+++ b/src/root.scss
@@ -8,3 +8,5 @@
 @import '~bulma/sass/elements/content.sass';
 @import '~bulma/sass/elements/container.sass';
 @import '~bulma/sass/elements/button.sass';
+@import '~bulma/sass/components/panel.sass';
+@import '~bulma/sass/grid/columns.sass';
